--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,10 @@
 
     <string name="title_recoveryTo30">Recuperación a 30 dias</string>
     <string name="title_recoveryTo60">Recuperación a 60 dias</string>
->>>>>>> 57104d76c6f385a4f28a9a48cd774b9534268a92
+
+    <string name="title_gross_purchases">Compras Brutas</string>
+
+    <string name="show_expense_interes">Ver interes de gasto</string>
+    <string name="show_comercial_interes">Ver interes de ingreso</string>
+
 </resources>
