--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,10 @@
 
     <string name="volver">Volver</string>
 
+    <string name="febrero">Febrero: </string>
+    <string name="marzo">Marzo: </string>
+    <string name="abril">Abril: </string>
+    <string name="mayo">Mayo: </string>
+    <string name="junio">Junio: </string>
 
 </resources>
