--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="botonComenzar">Comenzar</string>
+
     <!-- Navegación aportes y sueldos-->
     <string name="app_name">Proyecto_Flujo_Caja</string>
     <string name="BotonSiguiente">AportesPatronales</string>
