--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="botonComenzar">Comenzar</string>
-
+    <string name="botonIniFlujo">Iniciar Flujo</string>
+    <string name="botonModDatos">Modificar Datos</string>
     <!-- Navegación aportes y sueldos-->
     <string name="app_name">Proyecto_Flujo_Caja</string>
     <string name="BotonSiguiente">AportesPatronales</string>
