--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="botonComenzar">Comenzar</string>
     <string name="botonIniFlujo">Iniciar Flujo</string>
     <string name="botonModDatos">Modificar Datos</string>
+    <string name="botonVolver">Volver</string>
     <!-- Navegación aportes y sueldos-->
     <string name="app_name">Proyecto_Flujo_Caja</string>
     <string name="BotonSiguiente">AportesPatronales</string>
