Flujo de caja quintianual

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,6 @@
     <string name="mayo">Mayo: </string>
     <string name="junio">Junio: </string>
 
+    <string name="cinco">Al 5to Año</string>
+
 </resources>
